[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvos_hsi"
version = "0.2.0"
description = "HSI calibration & utilities for MVOS workflows"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Rishik Aggarwal" }]
license = { text = "MIT" }
dependencies = [
  "numpy",
  "scipy",
  "spectral",
  "scikit-image",
  "opencv-python",
  "imgaug",
  "matplotlib"
]

[project.scripts]
mvos-hsi = "mvos_hsi.calibration:main"
mvos-hsi-clip = "mvos_hsi.clipping:main"
mvos-hsi-augment = "mvos_hsi.augmentation:main"
mvos-hsi-plot = "mvos_hsi.plotting:main"

[tool.setuptools.packages.find]
where = ["src"]
